--- a/charts/templates/charts/index2.html
+++ b/charts/templates/charts/index2.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -100,7 +101,13 @@
 
 
 
-
+    <p>
+        Desenvolvido por:
+      <a class="navbar-brand logo_h" href="https://enedino.com.br"><img src="{% static 'assets/images/logo.png'%}"
+          alt=""></a>
+      <a class="navbar-brand logo_h" href="https://enedino.com.br"  style="heigth:20px"><img
+            src="{% static 'assets/images/faviconEnedino.svg'%}" style="width:30px" alt=""></a>
+      </p>
 
 
 
